@@ -1,0 +1,11 @@
+{
+	"settings" : {
+		"Name" : "Mainland Rectangled",
+		"Script" : "mainland_rectangled.js",
+		"Description" : "A typical map without any usable water.",
+		"Preview" : "mainland.png",
+		"SupportedBiomes": "generic/",
+		"Keywords": ["community"],
+		"CircularMap" : false
+	}
+}
