@@ -10,6 +10,7 @@ maps can be easily accessed in game with the filter "Community Maps".
 
 | Map Name | Author | Link | Publication Date |
 |----------|--------|------|------------------|
+| Mainland Rectangled | [andy5995](https://wildfiregames.com/forum/profile/21632-andy5995/) | - | 22-10-2021 |
 | Mainland TG | [Jammyjamjamman](https://wildfiregames.com/forum/profile/33845-jammyjamjamman/) | [Forum](https://wildfiregames.com/forum/topic/28758-mainland-with-teammates-placed-closely-together/) | 06-09-2020 |
 | African Plains TG | [Jammyjamjamman](https://wildfiregames.com/forum/profile/33845-jammyjamjamman/) | - | - |
 | Volcanic Island | [nani](https://wildfiregames.com/forum/index.php?/profile/27866-nani/) | [Forum](https://wildfiregames.com/forum/index.php?/topic/25695-random-map-volcanic-island/) | 18-04-2019 |
