@@ -1,3 +1,7 @@
+2021-10-22
+
+  * Mainland Rectangled added (random map)
+
 2021-10-20
 
   * allow changing civs, fix warnings
